--- a/menu/muscle04_pandas1_0.ipynb
+++ b/menu/muscle04_pandas1_0.ipynb
@@ -1531,7 +1531,7 @@
    "source": [
     "### 問題\n",
     "\n",
-    "ポケモンデータ http://logopt.com/data/Pokemon.csv\" に対して，メインタイプ（'Type 1')と世代('Generation')別の攻撃力（'Attack'）と守備力（'Defence'）の平均を集計せよ．\n",
+    "ポケモンデータ http://logopt.com/data/Pokemon.csv\" に対して，メインタイプ（'Type 1')と世代('Generation')別の攻撃力（'Attack'）と守備力（'Defense'）の平均を集計せよ．\n",
     "\n",
     "（ヒント：pivot_tableで，集計値に複数の値を設定するには，引数**values**にデータフレームの列名をリストとして与える．）\n"
    ]
@@ -1634,7 +1634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
