--- a/menu/muscle00_jupyter1_0.ipynb
+++ b/menu/muscle00_jupyter1_0.ipynb
@@ -7,13 +7,17 @@
     "id": "rluUao6d5LLg"
    },
    "source": [
-    "# Jupyter入門\n",
+    "# Jupyterの使い方について\n",
     "\n",
     "### ファイル操作\n",
     "\n",
+    "#### Jupyter Notebookとして起動した場合\n",
     "1. Files画面：左上にある**ファイル**⇒**Python3の新しいノートブック**を選択すると新しいノートブックを作成\n",
-    "2. ファイルの**保存**で，Google Cloudに保存\n",
-    "3. ファイルの**GitHubにコピーを保存**でGitHubを登録してあれば保存\n"
+    "2. ファイルの**保存**で保存できる\n",
+    "\n",
+    "#### Jupyter Labとして起動した場合\n",
+    "1. Files画面：左上にある**File**⇒**New**⇒**Notebook**から、Python3を選択\n",
+    "2. **File**⇒**Save Notebook**で保存できる\n"
    ]
   },
   {
@@ -27,17 +31,6 @@
     "\n",
     "新しいノートを起動させてから，保存してみよう．"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "7WcUo8OX5LLl"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -121,6 +114,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -147,12 +147,7 @@
     "$$x^2 - 6x + 1 = 0$$\n",
     "と表示される．\n",
     "\n",
-    "LaTeXについては，[こちら](http://www.latex-cmd.com/equation/equation.html)を参照．\n",
-    "\n",
-    "\n",
-    "### 問題\n",
-    "\n",
-    "下の例をダブルクリックしてMarkdown言語を表示させて読んでみよう．"
+    "LaTeXについては，[こちら](http://www.latex-cmd.com/equation/equation.html)を参照．"
    ]
   },
   {
@@ -178,33 +173,132 @@
     "\n",
     "ディスプレイ数式: $$f(x_1, x_2, \\ldots, x_n) = \n",
     "\\sum_{i=1}^{n-1} \\{ 100(x_i^2 - x_{i+1})^2 + (1-x_i)^2 \\}$$\n",
+    "\n",
     "### 作表\n",
     "|左寄せ|右寄せ|中央|\n",
     "|:-----------|------------:|:------------:|\n",
     "|ここに|何かを|書く|\n",
     "|文字位置が|自動的に|定まる|\n",
+    "\n",
     "### インデント\n",
     "    import numpy as np # 行頭にスペース4 つ入れるとインデントされる\n",
     "    # 文章中のコードなどに使える．\n",
+    "```python\n",
+    "print('こんにちは')\n",
+    "```\n",
+    "    \n",
+    "    \n",
     "### リンク\n",
-    "リンクはこのように[ipython.org](http://ipython.org /)\n",
+    "\n",
+    "リンクはこのように [ipython.org](http://ipython.org/)\n",
+    "\n",
     "### 水平線\n",
     "***\n",
+    "\n",
     "### 箇条書き( 番号付)\n",
     "1. その１\n",
     "2. その２"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "uqfHz84F5LL5"
    },
+   "source": [
+    "# Jupyerでのデバッグのやり方\n",
+    "\n",
+    "Python Debuggerモジュールを読み込むには，\n",
+    "**import pdb** \n",
+    "とする．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pdb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 呼び出し用の関数を準備する．\n",
+    "def f(x):\n",
+    "    print(\"x=\",100/(x+5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## プログラムを停止したい行の前に**pdb.set_trace()**と書くとデバッガが起動する．\n",
+    "\n",
+    "### 重要なコマンド一覧\n",
+    "\n",
+    "* h (help) でヘルプが出る．（help <コマンド> でコマンドの説明が出る．）\n",
+    "* q (quit) でデバッガを終了する．（デバッガをちゃんと終了させないとカーネルが暴走するので注意！）\n",
+    "* p (print) でプリント（コマンドと同じ変数でなければ，それを入れるだけでプリントしてくれる．）\n",
+    "* n (next) で次の行に進む．\n",
+    "* c (continue) で次の停止位置（ブレークポイント）まで進む．\n",
+    "* s (step into) で呼び出した先に移動する．\n",
+    "* l (list) で現在の近所のプログラムリストを表示する．\n",
+    "\n",
+    "以下のプログラムを動かして，コマンドを色々試してみよう．\n",
+    "\n",
+    "* 関数 f(x) 内では，変数 y はどうなっているだろうか？\n",
+    "* もとのプログラム内では，変数 x はどうなっているだろうか？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(3):\n",
+    "    pdb.set_trace()\n",
+    "    y = i+2\n",
+    "    f(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 意図的にエラーを起こしてみる．\n",
+    "\n",
+    "**%debug** とうつと，エラー箇所からデバッグを開始できる．\n",
+    "\n",
+    "* 変数xを表示させ，何故エラーが起きたかを考えてみよう．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(-10,0):\n",
+    "    y = i+2\n",
+    "    f(y) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%debug"
+   ]
   }
  ],
  "metadata": {
@@ -230,9 +324,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
