update training menu

--- a/menu/muscle01_basicprogramming1.ipynb
+++ b/menu/muscle01_basicprogramming1.ipynb
@@ -8,11 +8,7 @@
     }
    },
    "source": [
-    "# ■■■■■■■■■■■第１章■■■■■■■■■■■■\n",
-    "\n",
-    "（四則演算とprintの使い方）\n",
-    "\n",
-    "\n"
+    "# 1. 四則演算とprintの使い方"
    ]
   },
   {
@@ -29,7 +25,9 @@
     "\n",
     "Jupyterでは，電卓みたいに計算できる．$2^4$ （2の4乗）を計算してみよう．\n",
     "\n",
-    "（Pythonではべき乗の演算子は $**$ です．Jupyterでプログラムを実行するためには，Shiftlキーを押しながら，Enterキーを押します．すると，最後の文が評価されて画面に表示されます．）\n"
+    "- Pythonではべき乗の演算子は $**$ です\n",
+    "- Jupyterでプログラムを実行するためには，Shiftキーを押しながらEnterキーを押します． すると，最後の文が評価されて画面に表示されます．\n",
+    "    - もしくは再生ボタンを押す\n"
    ]
   },
   {
@@ -58,11 +56,9 @@
     "べき乗の演算子は $**$ なので，計算結果（16）が画面に表示されるはずです．次の例題を見てみましょう．\n",
     "\n",
     "\n",
-    "結果を画面に表示させるためには，print()関数を用います．printの後ろの()の中に表示したいものを入れると，出力が返されます．\n",
-    "\n",
-    "（このように，何かを入れると何かが返されるものを「関数」と呼びます．詳細については後述します．）\n",
-    "\n",
-    "たとえば，$2+7$ の結果と文字列 'Hello' （文字列を表示させるためには，' ' で囲むか，\" \" で囲む）を表示させてみましょう．"
+    "- 結果を画面に表示させるためには，print()関数を用います．printの後ろの()の中に表示したいものを入れると，出力が返されます．\n",
+    "- このように，何かを入れると何かが返されるものを「関数」と呼びます．詳細については後述します．\n",
+    "- たとえば，$2+7$ の結果と文字列 'Hello' （文字列を表示させるためには，' ' で囲むか，\" \" で囲む）を表示させてみましょう．"
    ]
   },
   {
@@ -93,8 +89,8 @@
     "\n",
     "画面に \"10を3で割ったときの商は\" に続いて $10 // 3$ の結果を，\"余りは\" に続いて剰余 $10 \\% 3$ を表示せよ．\n",
     "\n",
-    "（Python 3では整数除算の演算子は //，剰余の演算子は % です．普通の割り算 $/$ をすると小数（浮動小数点数）が表示されますので，\n",
-    "これも試してみてください．）\n"
+    "- Python 3では整数除算の演算子は //，剰余の演算子は % です．\n",
+    "- 普通の割り算 $/$ をすると小数（浮動小数点数）が表示されますので，これも試してみてください．\n"
    ]
   },
   {
@@ -191,11 +187,7 @@
     }
    },
    "source": [
-    "#   \n",
-    "\n",
-    "# ■■■■■■■■■■■第2章■■■■■■■■■■■■\n",
-    "\n",
-    "（変数と計算）"
+    "# 2. 変数と計算"
    ]
   },
   {
@@ -241,8 +233,7 @@
     "変数を使ったプログラムを作りましょう．変数xに123*45を代入した後，xの値を表示します．\n",
     "\n",
     "1. 変数 x に 123*45 の計算結果を代入する\n",
-    "\n",
-    "2. x の値を表示する\n",
+    "1. x の値を表示する\n",
     "\n",
     "という順番で命令を実行すればよいですね．\n"
    ]
@@ -303,7 +294,7 @@
     "\n",
     "以下のプログラムは，xとyの値を3回表示するのですが，それぞれ，何と何が表示されると思いますか？\n",
     "\n",
-    "プログラムがどのように動いて，変数には何が代入されるかを考えた上で，① 10,10 ② 10,20 ③ 20,20の中から選んで下さい．\n"
+    "プログラムがどのように動いて，変数には何が代入されるかを考えた上で， ① 10,10 ② 10,20 ③ 20,20 の中から選んで下さい．\n"
    ]
   },
   {
@@ -499,14 +490,7 @@
     }
    },
    "source": [
-    "#   \n",
-    "\n",
-    "# ■■■■■■■■■■■第3章■■■■■■■■■■■■\n",
-    "\n",
-    "（入力関数 input）\n",
-    "\n",
-    "\n",
-    "#  \n",
+    "# 3. 入力関数 input\n",
     "\n",
     "ユーザーに入力を促し入力を受け取る関数 input() の構文は以下のようになります．\n",
     "\n",
@@ -671,7 +655,7 @@
     "簡単のため，利子は無しとする．\n",
     "\n",
     "まず，借金の総額と，ひと月に返済する金額を入力すると，返済にかかる年数を表示し，さらに，毎年のボーナスから返済する金額を入力すると，返済完了が何年早まるかを表示し，\n",
-    "その次に返済を完了したい年数を入力すると，ボーナスからいくら返せばよいかを表示するプログラムを作成せよ．\n"
+    "その次に返済を完了したい年数を入力すると，ボーナスからいくら返せばよいかを表示するプログラムを作成せよ．"
    ]
   },
   {
@@ -818,23 +802,16 @@
     }
    },
    "source": [
-    "#   \n",
+    "# 4. 条件if文\n",
     "\n",
-    "# ■■■■■■■■■■■第4章■■■■■■■■■■■■\n",
-    "\n",
-    "（条件if文）\n",
-    "\n",
-    "今までのプログラムは分岐がありませんでした（これを直線的プログラム）と言います）．\n",
-    "\n",
+    "今までのプログラムは分岐がありませんでした（これを直線的プログラム）と言います．\n",
     "条件が成立するときだけ，ある文を実行させることによって，もう少し面白いプログラムが書けます．\n",
     "\n",
     "```python\n",
     "if 条件文 :\n",
-    "\n",
     "　　条件文が成立する（真：True)のときに実行される文のブロック\n",
     "```   \n",
-    "というのが基本文法です．：（コロン）を書いた後に改行して，字下げ（インデント）を付けるのを忘れないようにしてください．\n",
-    "#  "
+    "というのが基本文法です．：（コロン）を書いた後に改行して，字下げ（インデント）を付けるのを忘れないようにしてください．"
    ]
   },
   {
@@ -883,10 +860,9 @@
     "\n",
     "```python\n",
     "if 条件文 :\n",
-    "\n",
-    "　　条件文が成立する（真：True)のときに実行される文のブロック\n",
+    "　　条件文が成立する 真： True のときに実行される文のブロック\n",
     "else: \n",
-    "    条件文が成立しない（偽: False)のときに実行される文のブロック\n",
+    "    条件文が成立しない 偽: False のときに実行される文のブロック\n",
     "\n",
     "```\n",
     "\n",
@@ -923,7 +899,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "752011ee-3333-4e9f-811f-ee149c1377f1"
     }
@@ -1017,7 +992,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "5a94a7ba-860f-4bab-88c9-2cbf4b9a0e58"
     }
@@ -1051,7 +1025,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "20cc427e-4cf1-4086-882a-80a10a288419"
     }
@@ -1084,7 +1057,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "e7514176-f784-471f-ae1b-44de1221139b"
     }
@@ -1110,7 +1082,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "c974e4e9-f12a-41f4-bcdb-3b1b47a85fe7"
     }
@@ -1135,7 +1106,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "9132be7b-2dae-4894-9401-ce838c5f93a5"
     }
@@ -1163,7 +1133,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "e7421b18-c456-40b0-92aa-4c86e4a91234"
     }
@@ -1251,17 +1220,12 @@
     }
    },
    "source": [
-    "#   \n",
-    "\n",
-    "# ■■■■■■■■■■■■第5章■■■■■■■■■■■■\n",
-    "\n",
-    "（繰り返し文，while，for）\n",
+    "# 5. 繰り返し文，while，for\n",
     "\n",
     "プログラム（コンピュータ）は，同じ操作を繰り返すことが得意です．\n",
     "\n",
     "```python\n",
-    "while 条件: \n",
-    "　　\n",
+    "while 条件: 　\n",
     "  繰り返したい文\n",
     "```\n",
     " \n",
@@ -1274,7 +1238,7 @@
     "$5$ から $1$ までの数字を順番に表示するプログラムを作れ．\n",
     "\n",
     "xに最初に5を代入します．while x > 0: とxが正の間は繰り返す while 文を作ります．\n",
-    "繰り返したいブロックの中で，xをprintしてから，xをから1を引いた値を再びxに代入します．（これを忘れると止まらないプログラムになります．）\n"
+    "繰り返したいブロックの中で，xをprintしてから，xをから1を引いた値を再びxに代入します．これを忘れると止まらないプログラムになります．\n"
    ]
   },
   {
@@ -1290,7 +1254,7 @@
     "x = 5 \n",
     "while x > 0:\n",
     "    print(x)\n",
-    "    x= x -1  #x -= 1 と書いても同じ "
+    "    x= x - 1  #x -= 1 と書いても同じ "
    ]
   },
   {
@@ -1991,13 +1955,7 @@
     }
    },
    "source": [
-    "#   \n",
-    "\n",
-    "# ■■■■■■■■■■■■第6章■■■■■■■■■■■■\n",
-    "\n",
-    "（繰り返し文の応用，補助変数・カウント・フラグ）\n",
-    "\n",
-    "#   "
+    "# 6. 繰り返し文の応用，補助変数・カウント・フラグ"
    ]
   },
   {
@@ -2037,7 +1995,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "7d6e989a-80fa-4411-90b4-fe292794904a"
     }
@@ -2069,7 +2026,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "3cfc5633-90b0-4862-a30e-472cc250943e"
     }
@@ -2104,7 +2060,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "f34a507e-0dee-48e7-a166-38adb8b19c86"
     }
@@ -2143,7 +2098,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "ab19d124-d54e-4391-aa55-e61979a92ab6"
     }
@@ -2464,7 +2418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   },
   "nbpresent": {
    "slides": {
@@ -5247,5 +5201,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
