--- a/menu/muscle03_NumPy1_0.ipynb
+++ b/menu/muscle03_NumPy1_0.ipynb
@@ -7,12 +7,11 @@
     "id": "iy5cLOqX6VSW"
    },
    "source": [
-    "# Python言語によるビジネスアナリティクス\n",
-    "##実務家のための最適化，統計分析，機械学習（近代科学社）\n",
+    "# NumPy\n",
     "\n",
-    "## NumPy\n",
+    "困ったら、公式ページ([NumPy Reference](https://docs.scipy.org/doc/numpy/reference/))を見るのが一番である。\n",
     "\n",
-    "NumPyモジュールの基本的な使用法を説明する．\n",
+    "ここではNumPyモジュールの基本的な使用法を説明する．\n",
     "\n",
     "NumPyは科学技術計算のための基本モジュールであり，リストに似た配列を扱う．\n",
     "\n",
@@ -334,7 +333,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "SxguNZ-Y6VTA"
    },
    "source": [
@@ -1304,44 +1302,13 @@
    "source": [
     "### 問題\n",
     "\n",
-    "1. $x$ に1から100まで公差3の数列を代入し，$x$ の平方根のグラフをプロットせよ．ただし，平方根はNumPyのsqrt関数で計算せよ．(NumPyモジュールのsqrt関数はユニバーサル関数である．mathモジュールのsqrt関数を用いると，スカラーしか計算できないことに注意．）\n",
-    "\n",
-    "2. 0.1から10まで1000個の数値を均等に配置した $x$ 座標に対して $y=1/x$ の関数を描画せよ．"
+    "1. $x$ に1から100まで公差3の数列を代入し，$x$ の平方根のグラフをプロットせよ．ただし，平方根はNumPyのsqrt関数で計算せよ．(NumPyモジュールのsqrt関数はユニバーサル関数である．mathモジュールのsqrt関数を用いると，スカラーしか計算できないことに注意．）"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "NsNL1ydY6VUT"
-   },
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt # 図を描画する準備\n",
-    "%matplotlib inline\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "UrsKJQr86VUW"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "DG1swP7s6VUY"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1369,9 +1336,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
