--- a/menu/muscle04_pandas1_0.ipynb
+++ b/menu/muscle04_pandas1_0.ipynb
@@ -7,12 +7,11 @@
     "id": "ASz_Gm82JyfY"
    },
    "source": [
-    "# Python言語によるビジネスアナリティクス\n",
-    "## 実務家のための最適化，統計分析，機械学習（近代科学社）\n",
+    "#  pandas\n",
+    " \n",
+    "困ったら、公式ページ(例えば、[pandas0.23 API reference](https://pandas.pydata.org/pandas-docs/version/0.23.0/api.html))を見るのが一番である.\n",
     "\n",
-    "##  Pandas\n",
-    "\n",
-    "Pandasの機能は豊富すぎて網羅するとわかりにくくなる．ここではデータ解析でよく使うテクニックだけを紹介する．\n",
+    "ただし、Pandasの機能は豊富すぎて網羅するとわかりにくくなる．ここではデータ解析でよく使うテクニックだけを紹介する．\n",
     "\n",
     "まずpandasモジュール（パッケージ）をインポートする．慣例に従い *pd* という別名をつけておく．"
    ]
@@ -28,24 +27,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "JXtGVxkvJyfi"
-   },
-   "source": [
-    "次に，データを読む．urlを直接入れてWeb経由でも読むことができる．\n",
-    "\n",
-    "ここでは UCI機械学習レポジトリ https://archive.ics.uci.edu/ml/datasets.html からiris（あやめ）のデータを直接読んでみる．\n",
-    "\n",
-    "ブラウザでurl http://logopt.com/data/iris.data/ をみてデータを確認すると，列の名前（ヘッダー）がついておらずデータだけがカンマ区切りで並んでいるようだ．\n",
-    "\n",
-    "これはcsv (comma-separated valueの略）ファイルと呼ばれるタイプのテキストファイルなので，read_csv関数で読むことができる．返値はデータを表形式で保管するデータ構造であるデータフレームである．（ここでは *df* という名前の変数に保管しておく．）\n",
-    "\n",
-    "ついでに列名をnames引数で指定してあげよう．これは列名を表す文字列のリストとして与える．教科書「 Python言語によるビジネスアナリティクスの84ページに書いてあるように，データは順に「'がく片長','がく片幅','花びら長','花びら幅', '種類'」である．\n"
    ]
   },
   {
@@ -377,9 +358,9 @@
     "文法はいずれも同じで，以下の通り．\n",
     "\n",
     "```python\n",
-    " df.iloc[行の切り出し,列の切り出し]  #番号でのアクセス\n",
-    " df.loc[行の切り出し,列の切り出し]   #ラベルを用いたアクセス\n",
-    " df.ix[行の切り出し,列の切り出し]    #混合型（混乱するので使用すべきでない！）\n",
+    "df.iloc[行の切り出し,列の切り出し]  #番号でのアクセス\n",
+    "df.loc[行の切り出し,列の切り出し]   #ラベルを用いたアクセス\n",
+    "df.ix[行の切り出し,列の切り出し]    #混合型（混乱するので使用すべきでない！）\n",
     "```\n",
     "\n",
     "行と列はラベルもしくは番号でアクセスできる．**ラベル**とは，行に対してはインデックス，列に対しては列名を指す．\n",
@@ -398,9 +379,7 @@
     "\n",
     "つまり，番号 $i:j$ とすると $i$番目から$j$番目（注意！最後の要素が含まれる！）までが抽出される．\n",
     "\n",
-    "インデックスが整数の場合には，**リストと異なり最後の要素が含まれる**!! \n",
-    "\n",
-    "しばしば混乱を招くので**ixは使わない方が良い！** （教科書ではixだけ説明しているが．．．）\n",
+    "インデックスが整数の場合には，**リストと異なり最後の要素が含まれる \n",
     "\n",
     "切り出しを行うかわりに，抽出したい列名のリストを用いて，$[ 'がく片長', '花びら幅'  ]$ などと切り出しをしてもよい． \n",
     "\n",
@@ -520,7 +499,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "C9A_AAEVJygl"
    },
    "source": [
@@ -724,7 +702,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "KcEdo5ZqJyg3"
    },
    "source": [
@@ -763,7 +740,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "Rnj2ftY3Jyg7"
    },
    "source": [
@@ -805,7 +781,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "rgGuILR7JyhA"
    },
    "source": [
@@ -875,7 +850,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "eGXaYX3nJyhG"
    },
    "source": [
@@ -1202,7 +1176,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "hM8HNx0xJyhq"
    },
    "source": [
@@ -1451,7 +1424,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "5D4TdMlWJyiD"
    },
    "source": [
@@ -1525,7 +1497,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "C9PxaJ0cJyiH"
    },
    "source": [
@@ -1565,50 +1536,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "pMmxEi-iJyiL"
-   },
-   "source": [
-    "### 問題\n",
-    "\n",
-    "映画のデータ \"http://logopt.com/data/movie_metadata.csv\" に対して，主演俳優の列（'actor_1_name'）がジョニー・デップ（'Johnny Depp'）のものを抽出し，年度（'title_year'）別の予算（'budget'）と興行収入（'gross'）を線グラフで表示せよ．\n",
-    "\n",
-    "ヒント：行には年度を，列には何も指定しないでピボットテーブルを生成し，plotメソッドでグラフを生成する．"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 311
-    },
-    "colab_type": "code",
-    "id": "cDK72Bf_JyiL",
-    "outputId": "503bb182-22ff-49c4-deb1-e5066d30fb83"
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "movie = pd.read_csv(\"http://logopt.com/data/movie_metadata.csv\")\n",
-    "movie.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "g5aLVZk5JyiN"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1638,5 +1565,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
