--- a/menu/muscle05_matplotlib1_0.ipynb
+++ b/menu/muscle05_matplotlib1_0.ipynb
@@ -7,19 +7,20 @@
     "id": "zvnBl3-87CaR"
    },
    "source": [
-    "# Python言語によるビジネスアナリティクス\n",
-    "## 実務家のための最適化，統計分析，機械学習（近代科学社）\n",
+    "# グラフなどの可視化\n",
     "\n",
-    "## 可視化モジュールmatplotlib \n",
+    "## モジュールmatplotlib \n",
     "\n",
-    "教科書ではmatplotlibの基本的な使用法を解説しているが，ここではpandasから直接描画する方法について述べる．\n",
+    "困ったら公式ページ[Matplotlib API Overview](https://matplotlib.org/3.1.1/api/index.html) を見るのが一番である。\n",
+    "\n",
+    "本来ならmatplotlibの基本的な使用法を解説するべきではあるが，ここではpandasから直接描画する方法に着目して述べる．\n",
     "\n",
     "例題として用いるのはiris（アヤメ）のデータである．\n",
     "\n",
     "まずはpandasを用いてデータを読んでおく．\n",
     "\n",
     "\n",
-    "```\n",
+    "```python\n",
     "%matplotlib inline\n",
     "```\n",
     "としておくと，描画が画面にすぐに表示されるようになる．\n"
@@ -368,7 +369,7 @@
    "source": [
     "## 多次元データ 1 並行座標図\n",
     "\n",
-    "散布図では3次元までの図を可視化できる（3次元の場合の方法については教科書参照）が，4次元以上だと人間の目では無理だ．\n",
+    "散布図では3次元までの図を可視化できるが，4次元以上だと人間の目では無理だ．\n",
     "\n",
     "多次元データを可視化するための方法として**並行座標図**がある．\n",
     "\n",
@@ -572,7 +573,7 @@
     "id": "wSGiIjyC7CbS"
    },
    "source": [
-    "# データ解析用描画モジュール seaborn \n",
+    "## データ解析用描画モジュール seaborn \n",
     "\n",
     "seabornを用いることによって，さらに簡単にデータ解析ができ，描画も綺麗になる．\n",
     "\n",
@@ -784,9 +785,9 @@
     "\n",
     "seabornでは統計モジュール**statsmodels**を用いた回帰分析の結果を描画することができる．\n",
     "\n",
-    "カテゴリーデータ別の回帰を行いたい場合には，FacetGrid（教科書参照）を用いるのだが，**lmplot**は回帰の結果をFacetGridで表示してくる優れものである．\n",
+    "カテゴリーデータ別の回帰を行いたい場合には，FacetGrid）を用いるのだが，**lmplot**は回帰の結果をFacetGridで表示してくる優れものである．\n",
     "\n",
-    "例として教科書79ページにあるtipsデータを用いる．\n",
+    "例としてseabornに例題として含まれているtipsデータを用いる．\n",
     "\n",
     "FacetGridでは行(row)と列(col)を表すカテゴリーデータを引数で指定できる他に，色調(hue)も用いることができる．\n",
     "\n",
@@ -881,10 +882,10 @@
    "source": [
     "### 問題\n",
     "\n",
-    "1. titanicデータ（教科書82ページ）を読み込み，運賃(fare）と生存確率(survived)のロジスティック回帰を，性別(sex)ごとに行え．\n",
+    "1. seabornに例題として含まれているtitanicデータを読み込み，運賃(fare）と生存確率(survived)のロジスティック回帰を，性別(sex)ごとに行え．\n",
     "（ヒント：ロジスティック回帰を行うには，lmplotの引数のlogisticをTrueにする．）\n",
     "\n",
-    "2.  titanicデータ（教科書82ページ）を読み込み，客室クラス(class）と性別(sex)ごとの生存確率(survived)を集計した結果を描画せよ．"
+    "2. seabornに例題として含まれているtitanicデータを読み込み，客室クラス(class）と性別(sex)ごとの生存確率(survived)を集計した結果を描画せよ．"
    ]
   },
   {
@@ -948,9 +949,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
