--- a/menu/muscle06_statsmodels1_0.ipynb
+++ b/menu/muscle06_statsmodels1_0.ipynb
@@ -7,13 +7,14 @@
     "id": "IB0Kmqq7Kulp"
    },
    "source": [
-    "# Python言語によるビジネスアナリティクス\n",
-    "## 実務家のための最適化，統計分析，機械学習（近代科学社）\n",
+    "# statsmodelsを用いた統計の例題と練習問題\n",
     "\n",
-    "## statsmodelsを用いた統計の例題と練習問題\n",
+    "困ったら[公式ページ](https://www.statsmodels.org/stable/index.html)を見るのが一番\n",
     "\n",
+    "statsmodelsがインストールされていない場合、自分でインストールする必要があります\n",
+    "- 例えば、以下のコードでImportError: No module named statsmodelsが出た場合\n",
     "\n",
-    "### 線形回帰\n",
+    "## 線形回帰\n",
     "\n",
     "http://logopt.com/data/Diamond.csv からダイアモンドの価格データを読み込み，線形回帰を適用する．\n",
     "\n",
@@ -24,9 +25,7 @@
     "3. smfの一般化線形モデル**glm**を用いてモデルインスタンスを生成する．\n",
     "このとき，列名を用いた**式(formula)**を文字列で記述し引数**formula**で，データは引数**data**にデータフレームとして入力する．\n",
     "4. モデルインスタンスの**fitメソッド**で学習を行う．\n",
-    "5. モデルインスタンスの**summary(2)**メソッドで結果を見る．\n",
-    "\n",
-    "モデル式の**formula**の書き方については，教科書194ページを参照"
+    "5. モデルインスタンスの**summary(2)**メソッドで結果を見る．\n"
    ]
   },
   {
@@ -254,7 +253,7 @@
    "source": [
     "### ロジスティック回帰\n",
     "\n",
-    "titanicデータを用いる(データの詳細については教科書82ページ参照）．\n",
+    "titanicデータを用いる\n",
     "\n",
     "従属変数（予測するもの）は*survived*の列で，生き残ったか($=1$)，否か($=0$)を表す．\n",
     "\n",
@@ -440,7 +439,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": true,
     "id": "W_tDgEQdKumx"
    },
    "source": [
@@ -593,9 +591,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
