--- a/menu/muscle07_sklearn2.ipynb
+++ b/menu/muscle07_sklearn2.ipynb
@@ -7,17 +7,15 @@
     "id": "ERsJ8Yi52JiQ"
    },
    "source": [
-    "# Python言語によるビジネスアナリティクス\n",
+    "# scikit-learn を用いた機械学習の例題と練習問題 \n",
     "\n",
-    "## 実務家のための最適化，統計分析，機械学習（近代科学社）\n",
+    "何よりも[公式ページ](https://scikit-learn.org/)を見るのが一番\n",
+    "\n",
+    "scikit-learnがインストールされていない場合、自分でインストールする必要があります\n",
+    "- 例えば、以下のコードでImportError: No module named sklearnが出た場合\n",
     "\n",
     "\n",
-    "## scikit-learn を用いた 機械学習の例題と練習問題 \n",
-    "\n",
-    "\n",
-    "## 教科書 付録 B参照\n",
-    "\n",
-    "### B.2 線形回帰\n",
+    "### 線形回帰\n",
     "\n",
     "広告のデータ http://logopt.com/data/Advertising.csv を用いる．\n",
     "\n",
@@ -405,7 +403,7 @@
    "source": [
     "### 問題\n",
     "\n",
-    "教科書79ページのtipsデータに対して線形回帰を用いてもらえるチップの額を予測せよ．"
+    "seabornの例題であるtipsデータに対して線形回帰を用いてもらえるチップの額を予測せよ．"
    ]
   },
   {
@@ -645,7 +643,7 @@
    "source": [
     "### 問題\n",
     "\n",
-    "教科書81ページのtitanicデータに対してロジスティック回帰を行い，死亡確率の推定を行え．\n",
+    "titanicデータに対してロジスティック回帰を行い，死亡確率の推定を行え．\n",
     "\n",
     "ヒント：このデータは欠損値を含んでいる．pandasのところで学んだ欠損値処理を参照せよ．\n",
     "\n",
@@ -662,7 +660,12 @@
     "id": "d1DN_URv2Jjl"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import seaborn as sns\n",
+    "titanic = sns.load_dataset('titanic')\n",
+    "titanic.head()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -938,7 +941,7 @@
    "source": [
     "### リッジ回帰\n",
     "\n",
-    "教科書460ページになある正規化を追加した線形回帰は，**リッジ回帰**とよばれる．\n",
+    "正規化項を追加した線形回帰は，**リッジ回帰**とよばれる．\n",
     "\n",
     "パラメータ $\\lambda$ はリッジ回帰クラス Ridge では引数 alpha で与える．\n"
    ]
@@ -1118,15 +1121,11 @@
     "id": "ilrTsVGp2JkP"
    },
    "source": [
-    "### B.8 ニューラルネット，B.9 単純Bayes，B.10 決定木，B.11 アンサンブル法（ランダム森）\n",
+    "### B.8 ニューラルネット，B.9 単純Bayes，B.10 決定木，B.11 アンサンブル法（ランダムフォレスト）\n",
     "\n",
     "他の手法も，scikit-learnでは同じ手順で分析を行うことができる．\n",
     "\n",
-    "上の続きとしてirisデータで色々試してみよう．\n",
-    "\n",
-    "ニューラルネットは旧バージョンでは動かないが，\n",
-    "http://playground.tensorflow.org/\n",
-    "で深層学習（多階層のニューラルネット）を体験することができる．\n"
+    "上の続きとしてirisデータで色々試してみよう．"
    ]
   },
   {
@@ -1143,7 +1142,7 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.neural_network import MLPClassifier #ニューラルネット（旧バージョンでは実装されていないので，跳ばして良い．）\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "neural = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(10, 3), random_state=1)\n",
     "neural.fit(X_train, y_train)    # 学習\n",
     "yhat = neural.predict(X_test)   # 予測\n",
@@ -1218,8 +1217,8 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier #ランダム森\n",
-    "forest = RandomForestClassifier()\n",
+    "from sklearn.ensemble import RandomForestClassifier #ランダムフォレスト\n",
+    "forest = RandomForestClassifier(n_estimators=100)\n",
     "forest.fit(X_train, y_train)    # 学習\n",
     "yhat = forest.predict(X_test)   # 予測\n",
     "from sklearn import metrics\n",
@@ -1511,9 +1510,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
