--- a/menu/muscle09_integer_optimization.ipynb
+++ b/menu/muscle09_integer_optimization.ipynb
@@ -7,33 +7,10 @@
     "id": "lPfQamXV1m3R"
    },
    "source": [
-    "# Python言語によるビジネスアナリティクス\n",
-    "\n",
-    "## 実務家のための最適化，統計分析，機械学習（近代科学社）\n",
-    "\n",
-    "## PuLPとGurobi/Pythonによる混合整数最適化問題\n",
+    "# PuLPとGurobi/Pythonによる混合整数最適化問題\n",
     "\n",
     "* 簡単な例題\n",
     "* 多制約ナップサック問題\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 70
-    },
-    "colab_type": "code",
-    "id": "x_ONuN371z8Z",
-    "outputId": "3d4beca5-87f5-436a-f94f-52e4a9563b16"
-   },
-   "outputs": [],
-   "source": [
-    "# インストールしていなかったらpipにてインストール\n",
-    "# ただし、tigers上では特殊な設定なので、そのままやってもエラーになりますが\n",
-    "# !pip install mypulp"
    ]
   },
   {
@@ -206,9 +183,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
