--- a/menu/muscle02_basicprogramming2.ipynb
+++ b/menu/muscle02_basicprogramming2.ipynb
@@ -4,15 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ●●●●●●●●●●●●第７章●●●●●●●●●●●●\n",
-    "\n",
-    "（関数）\n",
-    "\n",
-    "#  \n",
+    "# 7. 関数\n",
     "\n",
     "プログラムが長くなると，部品を作って何度も再利用したくなります．\n",
     "\n",
-    "Pythonでは，そのようなプログラムの部品のことを関数とよび，def で定義します．\n",
+    "そのようなプログラムの部品のことを関数と呼びます. Pythonでは， def で定義します．\n",
     "\n",
     "基本的な構文は以下の通りです．\n",
     "\n",
@@ -89,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "● 例題７－３（再帰）\n",
+    "● 例題７－３\n",
     "\n",
     "フィボナッチ数 $F_n$ は\n",
     "\n",
@@ -243,11 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ●●●●●●●●●●●●第８章●●●●●●●●●●●●\n",
-    "\n",
-    "（文字列の操作）\n",
-    "\n",
-    "#  \n",
+    "# 8. 文字列の操作\n",
     "\n",
     "文字列についてはすでに ' ' もしくは \"  \"で挟むと生成できることを知っていると思います．\n",
     "\n",
@@ -393,12 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ●●●●●●●●●●●●第９章●●●●●●●●●●●●\n",
-    "\n",
-    "（リスト）\n",
-    "\n",
-    "#  \n",
-    "\n",
+    "# 9. リスト(list)\n",
     "\n",
     "Pythonではオブジェクトを保管するための幾つかの便利な機能が（最初から）準備されています．\n",
     "\n",
@@ -458,9 +445,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=10 * [0]\n",
+    "a = 10 * [0]\n",
     "for i in range(10):\n",
-    "    a[i]=i*10\n",
+    "    a[i] = i * 10\n",
     "a"
    ]
   },
@@ -519,9 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "リストの要素を小さい順に並べ替えたいときには，sort()メソッドを使います．\n",
@@ -548,7 +533,7 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "L = [ ]\n",
+    "L = []\n",
     "for i in range(10):\n",
     "    L.append( random.randint(1,100))\n",
     "print('元のリスト ', L)\n",
@@ -669,11 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ●●●●●●●●●●●●第１０章●●●●●●●●●●●●\n",
-    "\n",
-    "（タプル）\n",
-    "\n",
-    "#  \n",
+    "# 10. タプル(tuple)\n",
     "\n",
     "タプルはリストとほとんど同じものですが，リストと違って中身が変更できない不変型(immutable)です．\n",
     "文字列と同様に（不変型なので）以下で説明する辞書のキーとして使うことができます．\n",
@@ -782,11 +763,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ●●●●●●●●●●●●第１１章●●●●●●●●●●●●\n",
-    "\n",
-    "（辞書）\n",
-    "\n",
-    "#  \n",
+    "# 11. 辞書(dictionary)\n",
     "\n",
     "リストの他に辞書という便利な機能もあります．辞書は，*キー* を入れると *値*（あたい）が返ってくる写像(マップ）のようなものです．\n",
     "順番は任意なのでマップ型と呼ばれます．\n",
@@ -988,9 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "●問題１１－６\n",
     "\n",
@@ -1006,9 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "●問題１１－７\n",
     "\n",
@@ -1030,11 +1003,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ●●●●●●●●●●●●第１２章●●●●●●●●●●●●\n",
-    "\n",
-    "（クラス）\n",
-    "\n",
-    "#  \n",
+    "# 12. クラス\n",
     "\n",
     "Pythonでは，数やリストや辞書などはすべてオブジェクトと呼ばれます．これらのオブジェクトは元から準備されたものなので組み込みオブジェクトと呼ばれます．\n",
     "\n",
@@ -1237,22 +1206,6 @@
     "M=L\n",
     "\n",
     "print(M is L)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# メソッド\n",
-    "\n",
-    "文字列，リスト，辞書に対する様々なメソッドを練習する．\n"
    ]
   },
   {
@@ -1698,9 +1651,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
